# LeanBlueprintCopilot

./: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  esbuild.js.map  package-lock.json  package.json
.github/workflows/: ci.yml
python/: blueprint_extractor.py  blueprint_lean_linking.py  extractor.py  lean_project_extractor.py  lean_utils.py  mcp_server.py  pyproject.toml
src/: extension.ts
