[project]
name = "leanblueprintcopilot-python"
version = "0.1.0"
description = "Python utilities for Lean Blueprint Copilot VS Code extension"
authors = [
    { name = "Auguste Poiroux", email = "auguste.poiroux@epfl.ch" }
]
requires-python = "==3.10.0"
dependencies = [
    "jsonlines>=4.0.0",
    "leanblueprint>=0.0.15",
    "uv>=0.7.19",
    "mcp[cli]>=1.6.0",
    "lean-interact==0.7.0",
    "lean-blueprint-extractor"
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
lean-blueprint-extractor = { path = "../../../Lean/LeanBlueprintExtractor" }
