[project]
name = "leanblueprintcopilot-python"
version = "0.1.0"
description = "Python utilities for Lean Blueprint Copilot VS Code extension"
authors = [
    { name = "Auguste Poiroux", email = "auguste.poiroux@epfl.ch" }
]
requires-python = "==3.10.0"
dependencies = [
    "uv>=0.7.19",
    "lean-blueprint-extractor[mcp]"
]

[tool.uv.sources]
lean-blueprint-extractor = { git = "https://github.com/augustepoiroux/LeanBlueprintExtractor", rev = "96e9a027bdb7e201aec97781e738becf9fb5939f" }
